--- a/scripts/workingWithData.qmd
+++ b/scripts/workingWithData.qmd
@@ -8,6 +8,8 @@ library(tidyverse)
 library(descr)
 library(knitr)
 library(dplyr)
+library(PDSCE)
+library(PDShiny)
 ```
 
 ```{r}
@@ -58,7 +60,63 @@ freq(as.ordered(df$SRVC6), plot = FALSE)
 ```
 
 ```{r}
-df$FOCUS[df$FOCUS == NA] <- NA
-df$SRVC2[df$SRVC2 == NA] <- NA 
-df$SRVC6[df$SRVC6 == NA] <- NA
+#describe(df)
+#title_of_data_set$VAR1[title_of_data_set$VAR1 == 9] <- NA
+df$OTHNONTX[df$OTHNONTX == NA] <- NA
+df$DETOX[df$DETOX == NA] <- NA 
+df$TREATMT[df$TREATMT== NA] <- NA
+```
+
+```{r}
+#title_of_data_set$VAR1[is.na(title_of_data_set$VAR1)] <- 0
+df$OTHNONTX[is.na(df$OTHNONTX)] <- 0
+df$DETOX[is.na(df$DETOX)] <- 0
+df$TREATMT[is.na(df$TREATMT)] <- 0
+```
+
+```{r}
+'''
+> library(PDS)
+
+> NESARC$HS_DEGREE <- factor(ifelse(NESARC$S1Q6A %in% c("1", "2", "3", "4", "5", "6", "7"), "No", "Yes"))
+
+> summary(NESARC$HS_DEGREE)
+
+   No   Yes
+
+ 7849 35244
+'''
+library(PDSCE)
+df$OTHNONTX <- factor(ifelse(df$OTHNONTX %in% c("No", "Yes")))
+summary(df$OTHNONTX)
+```
+
+```{r}
+'''
+> NESARC$DepressLife <- factor(ifelse( (NESARC$MAJORDEPLIFE == 1 | NESARC$DYSLIFE == 1), "Yes", "No"))
+
+> summary(NESARC$DepressLife)
+
+   No   Yes
+
+34894  8199
+'''
+NESARC$DETOX <- factor(ifelse( (df$DETOX == 1 | df$TREATMT== 1), "Yes", "No"))
+summary(df$DETOX)
+```
+
+```{r}
+'''
+> nd_sum <- title_of_data_set$nd_symptom1 + title_of_data_set$nd_symptom2 + title_of_data_set$nd_symptom3
+
+> title_of_data_set$nd_sum <- nd_sum
+'''
+
+```
+
+```{r}
+'''
+> levels(title_of_data_set$VARIABLE) <- c("value", "value")
+'''
+
 ```
